# fdtd-em-rs

./: Cargo.toml  TODO.md  eframe_template.js  eframe_template_bg.wasm  fdtd.js  index.html
src/: _old.rs  app.rs  circuit.rs  circuit_editor.rs  common.rs  default.emf  fdtd_editor.rs  field_vis.rs  lib.rs  main.rs  node_map.rs  sim.rs  streamers.rs  wire_editor_3d.rs
